[gd_scene load_steps=3 format=3 uid="uid://d3y4x608q8ra"]

[ext_resource type="Script" uid="uid://c110c81npn7lf" path="res://scripts/ui/HotbarSlot.gd" id="1_slot"]
[ext_resource type="Texture2D" uid="uid://wu33gyn382r1" path="res://assets/Items/box mage.png" id="2_abmc8"]

[node name="HotbarSlot" type="TextureRect"]
custom_minimum_size = Vector2(70, 70)
offset_right = 70.0
offset_bottom = 70.0
expand_mode = 1
script = ExtResource("1_slot")

[node name="Shadow" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="Highlight" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.9, 0.3, 0.8)

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_abmc8")
expand_mode = 1
stretch_mode = 5

[node name="CooldownOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CooldownLabel" type="Label" parent="CooldownOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "1.5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -70.0
offset_right = 25.0
offset_bottom = -50.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 14
text = "1"
vertical_alignment = 1
